game stats added back (dark mode issues)

--- a/src/styles/components/played_games.scss
+++ b/src/styles/components/played_games.scss
@@ -2,10 +2,7 @@
   margin-left: 25px;
   margin-top: 2rem;
   text-align: center;
-  @media screen and (min-width: 1500px) {
-    margin: 0 auto;
-    width: 80%;
-  }
+  @include centerContent();
 }
 .filters {
   margin-bottom: 20px;
